--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8646,7 +8646,8 @@ textarea.form-control {
 
 .ftco-animate {
   opacity: 0;
-  visibility: hidden; }
+  visibility: hidden; 
+}
 
 .bg-primary {
   background: #589167 !important; }
