--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -74,6 +74,13 @@ div.bg-img {
 
 /* ./Bootstrap Modal */
 
+img.how-it-work {
+    width: 120px;
+    height: 120px;
+    border-radius: 100%;
+    z-index: -1;
+}
+
 @media (max-width: 768px) {
     .mobile-hidden {
         display: none;
