--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -81,6 +81,16 @@ img.how-it-work {
     z-index: -1;
 }
 
+.blog-entry ul li {
+    text-align: left;
+}
+
+.circle {
+    border-radius: 100%;
+    width: 300px;
+    height: 100px;
+}
+
 @media (max-width: 768px) {
     .mobile-hidden {
         display: none;
